[package]
name = "token-lending-flash-loan"
version = "0.1.0"
description = "SPL Token Lending Flash Loan Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_lending_flash_loan"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "2.0"
spl-token = "6.0"
thiserror = "1.0"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"